# iotdb-nodejs-plugin

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  demo.py  iotdb.cpp  iotdb.js  package-lock.json  package.json
iotdb/include/: TSIService.h  rpc_types.h
iotdb/include/thrift/: config.h
iotdb/lib/: libiotdb_session.dylib
lib/: binding.js
src/: hello_world.cc  iotdb.cc
test/: use.js
test/linux/: iotdb.node
test/mac/: iotdb.node
test/win/: iotdb.node
